--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>TuDoctorOnline</title>
+    <title>serviplus</title>
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
